--- a/VRCTools.csproj
+++ b/VRCTools.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -89,6 +89,8 @@
     <Reference Include="VRLoader, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IL\ILInstruction.cs" />
+    <Compile Include="IL\ILParser.cs" />
     <Compile Include="libs\CComVRCModNetworkEdition\Client.cs" />
     <Compile Include="libs\CComVRCModNetworkEdition\Command.cs" />
     <Compile Include="libs\CComVRCModNetworkEdition\CommandManager.cs" />
@@ -96,6 +98,7 @@
     <Compile Include="datas\ImageDatas.cs" />
     <Compile Include="mod\BasicLogoutLogAndPatch.cs" />
     <Compile Include="mod\ModValues.cs" />
+    <Compile Include="utils\OculusUtils.cs" />
     <Compile Include="mod\ui\uicomponents\IConfigElement.cs" />
     <Compile Include="mod\ui\uicomponents\UIToggleSwitch.cs" />
     <Compile Include="mod\updatesAndDependencies\AvatarFavUpdater.cs" />
@@ -105,7 +108,6 @@
     <Compile Include="mod\ui\pages\ModConfigPage.cs" />
     <Compile Include="mod\serializables\ModdedUser.cs" />
     <Compile Include="mod\ModdedUsersManager.cs" />
-    <Compile Include="mod\VRCModNetworkLogin.cs" />
     <Compile Include="networkcommands\AuthCommand.cs" />
     <Compile Include="networkcommands\InstanceChangedCommand.cs" />
     <Compile Include="networkcommands\LogoutCommand.cs" />
@@ -117,6 +119,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="utils\DebugUtils.cs" />
     <Compile Include="utils\QuickMenuUtils.cs" />
+    <Compile Include="utils\SteamAPI.cs" />
+    <Compile Include="utils\SteamUtils.cs" />
     <Compile Include="utils\Texture2DUtils.cs" />
     <Compile Include="utils\UnityUiUtils.cs" />
     <Compile Include="utils\VRCFlowManagerUtils.cs" />
