--- a/VRCTools.csproj
+++ b/VRCTools.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -141,10 +141,7 @@
     <Compile Include="utils\OculusUtils.cs" />
     <Compile Include="mod\ui\uicomponents\IConfigElement.cs" />
     <Compile Include="mod\ui\uicomponents\UIToggleSwitch.cs" />
-    <Compile Include="mod\updatesAndDependencies\AvatarFavUpdater.cs" />
     <Compile Include="mod\updatesAndDependencies\DependenciesDownloader.cs" />
-    <Compile Include="mod\DiscordManager.cs" />
-    <Compile Include="libs\DiscordRpc.cs" />
     <Compile Include="mod\ui\pages\ModConfigPage.cs" />
     <Compile Include="mod\serializables\ModdedUser.cs" />
     <Compile Include="mod\ModdedUsersManager.cs" />
