--- a/VRCTools.csproj
+++ b/VRCTools.csproj
@@ -37,6 +37,9 @@
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="0Harmony.1.2.0.1">
+      <HintPath>lib\0Harmony.1.2.0.1.dll</HintPath>
+    </Reference>
     <Reference Include="Assembly-CSharp, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>lib\Assembly-CSharp.dll</HintPath>
@@ -100,43 +103,9 @@
     <Compile Include="libs\CComVRCModNetworkEdition\CommandManager.cs" />
     <Compile Include="libs\CComVRCModNetworkEdition\ConnectionListener.cs" />
     <Compile Include="datas\ImageDatas.cs" />
-    <Compile Include="libs\Harmony\Attributes.cs" />
-    <Compile Include="libs\Harmony\CodeInstruction.cs" />
-    <Compile Include="libs\Harmony\CodeTranspiler.cs" />
-    <Compile Include="libs\Harmony\Extras\DelegateTypeFactory.cs" />
-    <Compile Include="libs\Harmony\Extras\FastAccess.cs" />
-    <Compile Include="libs\Harmony\Extras\MethodInvoker.cs" />
-    <Compile Include="libs\Harmony\GlobalSuppressions.cs" />
-    <Compile Include="libs\Harmony\HarmonyInstance.cs" />
-    <Compile Include="libs\Harmony\HarmonyMethod.cs" />
-    <Compile Include="libs\Harmony\HarmonySharedState.cs" />
-    <Compile Include="libs\Harmony\ILCopying\ByteBuffer.cs" />
-    <Compile Include="libs\Harmony\ILCopying\Emitter.cs" />
-    <Compile Include="libs\Harmony\ILCopying\ILInstruction.cs" />
-    <Compile Include="libs\Harmony\ILCopying\Memory.cs" />
-    <Compile Include="libs\Harmony\ILCopying\MethodCopier.cs" />
-    <Compile Include="libs\Harmony\ILCopying\Signature.cs" />
-    <Compile Include="libs\Harmony\MethodPatcher.cs" />
-    <Compile Include="libs\Harmony\Patch.cs" />
-    <Compile Include="libs\Harmony\PatchFunctions.cs" />
-    <Compile Include="libs\Harmony\PatchProcessor.cs" />
-    <Compile Include="libs\Harmony\Priority.cs" />
-    <Compile Include="libs\Harmony\Tools\AccessCache.cs" />
-    <Compile Include="libs\Harmony\Tools\AccessTools.cs" />
-    <Compile Include="libs\Harmony\Tools\DynamicTools.cs" />
-    <Compile Include="libs\Harmony\Tools\Extensions.cs" />
-    <Compile Include="libs\Harmony\Tools\FileLog.cs" />
-    <Compile Include="libs\Harmony\Tools\PatchTools.cs" />
-    <Compile Include="libs\Harmony\Tools\SelfPatching.cs" />
-    <Compile Include="libs\Harmony\Tools\SymbolExtensions.cs" />
-    <Compile Include="libs\Harmony\Tools\Traverse.cs" />
-    <Compile Include="libs\Harmony\Transpilers.cs" />
-    <Compile Include="mod\BasicLogoutLogAndPatch.cs" />
     <Compile Include="mod\ModValues.cs" />
-    <Compile Include="utils\OculusUtils.cs" />
     <Compile Include="mod\ui\uicomponents\IConfigElement.cs" />
     <Compile Include="mod\ui\uicomponents\UIToggleSwitch.cs" />
-    <Compile Include="mod\updatesAndDependencies\DependenciesDownloader.cs" />
     <Compile Include="mod\ui\pages\ModConfigPage.cs" />
     <Compile Include="mod\serializables\ModdedUser.cs" />
     <Compile Include="mod\ModdedUsersManager.cs" />
